--- a/app/src/main/res/layout/item_other_message.xml
+++ b/app/src/main/res/layout/item_other_message.xml
@@ -10,10 +10,10 @@
         android:id="@+id/textViewAuthor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="Автор"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Автор" />
 
     <TextView
         android:id="@+id/textViewTextOfMessage"
@@ -21,7 +21,17 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:textSize="18sp"
-        tools:text="Текст сообщения"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewAuthor"
+        tools:text="Текст сообщения" />
+
+    <ImageView
+        android:id="@+id/imageViewImage"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewAuthor" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
