--- a/app/src/main/res/layout/activity_list_message.xml
+++ b/app/src/main/res/layout/activity_list_message.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#1122aacc"
     tools:context=".screens.messages.MessagesListActivity">
 
     <ImageView
